// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReceiveFundsForm > should emit amount onChange event 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4"
    >
      <fieldset
        class="flex min-w-0 flex-col css-ea0il3"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="pr-20 css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value="10"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFundsForm > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4"
    >
      <fieldset
        class="flex min-w-0 flex-col css-ea0il3"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="pr-20 css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
